# automake_example

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c
src/.deps/: helloDowney-main.Po
src/share_lib/: Makefile.am  share_lib.c  share_lib.h
src/share_lib/.deps/: libhello_la-share_lib.Plo
src/static_lib/: Makefile.am  static_lib.c  static_lib.h
src/static_lib/.deps/: static_lib.Po
